--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
     "name": "Stream & Strum",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Encuentra acordes automáticamente desde tu reproductor de música favorito",
+    "author": "frossig",
     "permissions": [
       "activeTab",
       "tabs",
